--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="/js/highlightjs/styles/github.css">
   <link rel="stylesheet" href="/js/highlightjs/styles/ssms.css" />
 
-  <script type="text/javascript"> var passwd = 'empty'; while (passwd != 'pi') {passwd = prompt("What is the result of (\integrate_{-inf}^{+inf}{exp{-x^2}})^2", "your answer here");} </script>
+<!--   <script type="text/javascript"> var passwd = 'empty'; while (passwd != 'pi') {passwd = prompt("What is the result of (\integrate_{-inf}^{+inf}{exp{-x^2}})^2", "your answer here");} </script> -->
 
   <script type="text/javascript" src="/js/highlightjs/highlight.min.js"></script>
 
